--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,21 +21,30 @@ app:
   #maxPoolPreparedStatementPerConnectionSize
   ##filter：    监控统计用的filter:stat;日志用的filter:log4j; 防御SQL注入的filter:wall。需要在web.xml中加入servlet、filter;否则报错。
   #访问监控页面：http://ip：port/projectName/druid/index.html
-datasource:
-  jdbc:
-    driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost/springmvcmybatis_schema?useUnicode=true&amp;characterEncoding=UTF-8
-    username: root
-    password: mofan123
-    maxActive: 10
-    maxWait: 30000
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost/springmvcmybatis_schema?useUnicode=true&amp;characterEncoding=UTF-8
-    username: root
-    password: mofan123
+    url: jdbc:mysql://mypay1.devdb.alipay.net/test_boot?useUnicode=true&amp;characterEncoding=UTF-8
+    username: mobile
+    password: ali88
+    type: com.alibaba.druid.pool.DruidDataSource
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
 
-
-
-
+#typeAliasesPackage：它一般对应我们的实体类所在的包，这个时候会自动取对应包中不包括包名的简单类名作为包括包名的别名
+#。多个package之间可以用逗号或者分号等来进行分隔。(value的值一定要是包的全名)
+mybatis:
+  mapperLocations:  classpath:mapper/*.xml
+  typeAliasesPackage: com.core.dao.mapper.model
+  config: classpath:mybatis-config.xml
