--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<swagger2-version>2.6.1</swagger2-version>
 		<swagger-springmvc.version>0.9.5</swagger-springmvc.version>
 		<alibaba.druid.version>1.0.20</alibaba.druid.version>
+		<jackson-dataformat-yaml.version>2.8.9</jackson-dataformat-yaml.version>
 	</properties>
 
 	<!-- 项目的部署配置：指定Maven分发构件的位置?mvn deploy  -->
@@ -61,6 +62,31 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<!-- 日志框架logback
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
+		</dependency> -->
+		<!-- 日志框架log4j2 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>${jackson-dataformat-yaml.version}</version>
 		</dependency>
 		<!-- druid阿里巴巴数据库连接池 -->
 		<dependency>
@@ -94,7 +120,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
 		<!-- 公共组件 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -145,6 +170,7 @@
 			<artifactId>swagger-springmvc</artifactId>
 			<version>${swagger-springmvc.version}</version>
 		</dependency>
+		<!-- 日志框架 -->
 	</dependencies>
 
 	<build>
