--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 		<swagger-springmvc.version>0.9.5</swagger-springmvc.version>
 		<alibaba.druid.version>1.0.20</alibaba.druid.version>
 		<jackson-dataformat-yaml.version>2.8.9</jackson-dataformat-yaml.version>
+		<powermock-api-mockito.version>1.6.6</powermock-api-mockito.version>
+		<mockito-all.version>1.10.19</mockito-all.version>
+		<powermock-module-junit4.version>1.6.6</powermock-module-junit4.version>
+		<powermock-module-junit4-rule-agent.version>1.6.6</powermock-module-junit4-rule-agent.version>
+		<powermock-module-junit4-rule.version>1.6.6</powermock-module-junit4-rule.version>
+		<org.jacoco.agent.version>0.7.9</org.jacoco.agent.version>
 	</properties>
 
 	<!-- 项目的部署配置：指定Maven分发构件的位置?mvn deploy  -->
@@ -56,7 +62,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
 		</dependency>
 		<!--数据库连接jdbc依赖-->
 		<dependency>
@@ -88,6 +97,12 @@
 			<artifactId>jackson-dataformat-yaml</artifactId>
 			<version>${jackson-dataformat-yaml.version}</version>
 		</dependency>
+		<!-- 集成测试-热部署 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<!-- druid阿里巴巴数据库连接池 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -104,7 +119,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
 		<!-- Spring-Mybatis -->
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
@@ -140,13 +154,25 @@
 		<!--Mybatis-->
 		<dependency>
 			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-spring</artifactId>
-			<version>${mybatis-spring.version}</version>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>${mybatis.version}</version>
+			<artifactId>mybatis-spring</artifactId>
+			<version>${mybatis-spring.version}</version>
+		</dependency>
+		<!-- 分页插件 -->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>4.1.1</version>
+		</dependency>
+		<!--通用Mapper插件-->
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper</artifactId>
+			<version>3.3.4</version>
 		</dependency>
 		<!--Mysql / DataSource-->
 		<dependency>
@@ -170,7 +196,48 @@
 			<artifactId>swagger-springmvc</artifactId>
 			<version>${swagger-springmvc.version}</version>
 		</dependency>
-		<!-- 日志框架 -->
+		<!-- 单元测试 powermock+mockito+junit4 -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>${mockito-all.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<version>${powermock-api-mockito.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock-module-junit4.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4-rule-agent</artifactId>
+			<version>${powermock-module-junit4-rule-agent.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4-rule</artifactId>
+			<version>${powermock-module-junit4-rule.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- 单元测试覆盖率插件 -->
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>org.jacoco.agent</artifactId>
+			<classifier>runtime</classifier>
+			<version>${org.jacoco.agent.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -179,6 +246,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+				</configuration>
 			</plugin>
 		</plugins>
 
