--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,9 +24,9 @@ app:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://mypay1.devdb.alipay.net/test_boot?useUnicode=true&amp;characterEncoding=UTF-8
-    username: mobile
-    password: ali88
+    url: jdbc:mysql://127.0.0.1:3306/test_boot?useUnicode=true&amp;characterEncoding=UTF-8
+    username: root
+    password: mofan123
     type: com.alibaba.druid.pool.DruidDataSource
     filters: stat
     maxActive: 20
@@ -45,7 +45,7 @@ spring:
 #typeAliasesPackage：它一般对应我们的实体类所在的包，这个时候会自动取对应包中不包括包名的简单类名作为包括包名的别名
 #。多个package之间可以用逗号或者分号等来进行分隔。(value的值一定要是包的全名)
 mybatis:
-  config: classpath*:/mybatis/mybatis-config.xml
+  config-location: classpath*:/mybatis-config.xml
   #type-aliases-package: com.core.dao.mapper             #实体类所做包
   #mapper-locations: classpath:mybatis/mappers/*Mapper.xml   #mapper.xml所在位置
 
