--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
-		<mysql-connector-java.version>5.1.8</mysql-connector-java.version>
-		<mybatis-spring.version>1.2.2</mybatis-spring.version>
-		<mybatis.version>3.2.8</mybatis.version>
+		<mysql-connector-java.version>5.1.42</mysql-connector-java.version>
 		<pagehelper.version>4.1.1</pagehelper.version>
 		<swagger2-version>2.6.1</swagger2-version>
 		<swagger-springmvc.version>0.9.5</swagger-springmvc.version>
@@ -144,17 +142,6 @@
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.1.1</version>
-		</dependency>
-		<!--Mybatis-->
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>${mybatis.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-spring</artifactId>
-			<version>${mybatis-spring.version}</version>
 		</dependency>
 		<!-- 分页插件 -->
 		<dependency>
@@ -278,6 +265,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<fork>true</fork>
+					<jvmArguments>-Dfile.encoding=UTF-8</jvmArguments>
 				</configuration>
 			</plugin>
 		</plugins>
