--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,9 @@
-banner:
-  charset: UTF-8
 server:
   port: 8080
-  context-path: /myBoot
   tomcat:
     uri-encoding: UTF-8
+  servlet:
+    context-path: /myBoot
 spring:
   http:
     encoding:
@@ -15,6 +14,5 @@ spring:
     encoding: UTF-8
   profiles:
     active: dev
-  mvc:
-    view:
-      prefix:/jsp
+  banner:
+    charset: UTF-8
